Fixing Buy Now on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1037,6 +1037,20 @@ hr {
   backdrop-filter: blur(5px) brightness(0.5);
   -webkit-backdrop-filter: blur(5px) brightness(0.5);
 }
+
+@media screen and (max-width: 760px) {
+  .buyModal {
+    width: 100vw;
+    min-height: 100vh;
+    height: fit-content;
+    position: absolute;
+    left: 0vw;
+    top: 0vh;
+  }
+  .textContainer {
+    height: fit-content;
+  }
+}
 .textContainer * {
   padding: 0.2em;
 }
